@@ -10,6 +10,8 @@
 # Version 0.3
 # Andrew Horton added examples, changed time since epoch match for less false positives with Joomla, added mosvisitor cookie match
 # Aung Khant(http://yehg.net) added description, README.php match, Mambo Admin match
+# Version 0.4 by Andrew Horton
+# added matches suggested by Aung Khant including 'meta name="description' and /<a href="[^"]*index.php\?option=com_/ from the Joomla plugin
 
 Plugin.define "Mambo" do
 author "Andrew Horton"
@@ -20,6 +22,7 @@ examples %w|http://historycouncilvic.org.au/ http://www.turksandcaicosproperty.c
 
 matches [
 {:regexp=>/<meta name="Generator" content="Mambo - Copyright 2000 - [0-9]+ Miro International Pty Ltd.  All rights reserved." \/>/},
+{:regexp=>/<meta name="description" content="Mambo - the dynamic portal engine and content management system" \/>/},
 {:url=>'README.php', :text=>'Mambo is OSI Certified Open Source Software, released under the GNU General Public License' },
 {:url=>'administrator/templates/mambo_admin/templateDetails.xml', :regexp=> /(<name>Mambo Admin<\/name>|<authorUrl>http:\/\/www\.mambo\-foundation\.org<\/authorUrl>)/}
 ]
@@ -29,6 +32,11 @@ m=[]
 	# joomla 1.0 + mambo have this
 	if @body.scan(/<\/html>.*(\n)*<!-- [0-9]+.*-->(\n)*\z/) and !@body.scan(/joomla/i)
 		m << {:name=>"seconds since epoch in html comment afer </html>",:certainty=>25}
+	end
+
+	if @body =~ /<a href="[^"]*index.php\?option=com_/
+		modules = @body.scan(/<a href="[^"]*index.php\?option=(com_[^&"]+)/).flatten.compact.sort.uniq
+		m << {:certainty=>25,:modules=>modules}
 	end
 
 	m << {:name=>"mosvisitor cookie" } if @meta["set-cookie"] =~ /mosvisitor=[0-9]+/ 
