@@ -36,6 +36,9 @@ Version 0.4.6 Released ? 2010
 * Changed :version_regexp_offset, :modules_regexp_offset, etc to :regexp_offset. Updated 86 plugins.
 * Added :filepath match type
 * Renamed disabled-plugins/ to plugins-disabled/
+* Updated mailto plugin
+* Updated Mambo and Joomla plugins with suggestions from Aung Khant
+
 
 Version 0.4.5 Released August 17th 2010
 * Added 5 plugins from Tonmoy Saikia. They are: Commonspot, TextPattern, Mediawiki, DUclassified and Mailman
